--- a/index.html
+++ b/index.html
@@ -30,32 +30,36 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/profile.png" alt="" />
-                <h1 class="name">Alan Doe</h1>
-                <h3 class="tagline">Full Stack Developer</h3>
+                <img class="profile" src="assets/images/IMG_20180427_161345.jpg" alt="" />
+                <h1 class="name">Stith Alejandro Suárez</h1>
+                <h3 class="tagline">Desarrollador Senior PHP</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: yourname@email.com">alan.doe@website.com</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li>
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li>
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/username</a></li>
-                    <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li>
+                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: sasuarezp@gmail.com">sasuarezp@gmail.com</a></li>
+                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:3204007852">3204007852</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">webdevel.com.co</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/suaper</a></li>
+                    <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@StithSuarez</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
-                <h2 class="container-block-title">Education</h2>
+                <h2 class="container-block-title">Educación</h2>
                 <div class="item">
-                    <h4 class="degree">MSc in Computer Science</h4>
-                    <h5 class="meta">University of London</h5>
-                    <div class="time">2011 - 2012</div>
+                    <h4 class="degree">Ingeniería de Sistemas</h4>
+                    <h5 class="meta">Fundación Universitaria Panamericana</h5>
+                    <div class="time">2016 - 2019</div>
                 </div><!--//item-->
                 <div class="item">
-                    <h4 class="degree">BSc in Applied Mathematics</h4>
-                    <h5 class="meta">Bristol University</h5>
-                    <div class="time">2007 - 2011</div>
+                    <h4 class="degree">Tecnólogo Profesional en Ingeniería de Sistemas</h4>
+                    <h5 class="meta">Fundación Universitaria Panamericana</h5>
+                    <div class="time">2013 - 2015</div>
+                </div><!--//item-->
+                <div class="item">
+                    <h4 class="degree">Técnico Profesional en Ingeniería de Sistemas</h4>
+                    <h5 class="meta">Fundación Universitaria San José</h5>
+                    <div class="time">2010 - 2012</div>
                 </div><!--//item-->
             </div><!--//education-container-->
             
