--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img class="profile" src="assets/images/IMG_20180427_161345.jpg" alt="" />
-                <h1 class="name">Stith Alejandro Suárez</h1>
+                <h1 class="name">Alejandro Suárez</h1>
                 <h3 class="tagline">Desarrollador Senior PHP</h3>
             </div><!--//profile-container-->
             
